fix: prevent ooverflow on dialogs

--- a/src/renderer/src/components/layout/sideBar/Collections/PreRequest/PreRequest.module.css
+++ b/src/renderer/src/components/layout/sideBar/Collections/PreRequest/PreRequest.module.css
@@ -1,7 +1,7 @@
 .preRequest {
   width: 40rem;
-  min-height: 20rem;
   display: flex;
+  min-height: 18rem;
   flex-direction: column;
 
   .bar {
@@ -53,9 +53,13 @@
   .tabs {
     flex: 1;
     border-bottom: 1px solid var(--border-color);
-    min-height: 20rem;
-    max-height: 20rem;
+    height: 100%;
+    min-height: 12rem;
     overflow-y: auto;
+
+    .tabsPanels {
+      /*min-height: 10rem;*/
+    }
 
     .dataToCapture {
       select {
@@ -75,8 +79,11 @@
 
   .footer {
     padding: 0.5rem;
+    gap: 1rem;
     display: flex;
     justify-content: space-between;
+    min-height: 3rem;
+    overflow: hidden;
 
     .left {
       display: flex;
